--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pandas==1.5.0
 python-dotenv==0.19.1
 streamlit==1.13.0
 streamlit-authenticator==0.1.4
-streamlit-aggrid==0.2.3.post2
+streamlit-aggrid
 streamlit-elements==0.1.0
 plotly~=5.9.0
 xlsxwriter==1.4.4
